CMake: Make the cppdap target's include directory public
Avoids having to pull this in as an explicit include directory for projects that depend on cppdap.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,7 @@ function(cppdap_set_target_options target)
     #     target_compile_options(${target} PRIVATE "-Wl,--no-undefined")
     # endif()
 
-    target_include_directories(${target} PRIVATE ${CPPDAP_INCLUDE_DIR})
+    target_include_directories(${target} PUBLIC ${CPPDAP_INCLUDE_DIR})
 endfunction(cppdap_set_target_options)
 
 ###########################################################
