Add a simple network client / server example
Issue: #77

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,5 +286,6 @@ if(CPPDAP_BUILD_EXAMPLES)
     endfunction(build_example)
 
     build_example(hello_debugger)
+    build_example(simple_net_client_server)
 
 endif(CPPDAP_BUILD_EXAMPLES)
