cmakelists.txt: add destinations to install targets
Add proper ARCHIVE, LIBRARY, and INCLUDES to install target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,8 +214,11 @@ configure_package_config_file(
 )
 
 install(
-	TARGETS "${CPPDAP_TARGET_NAME}"
-	EXPORT "${CPPDAP_TARGETS_EXPORT_NAME}"
+	TARGETS                  "${CPPDAP_TARGET_NAME}"
+	EXPORT                   "${CPPDAP_TARGETS_EXPORT_NAME}"
+    ARCHIVE DESTINATION      "${CMAKE_INSTALL_LIBDIR}"
+    LIBRARY DESTINATION      "${CMAKE_INSTALL_LIBDIR}"
+    INCLUDES DESTINATION     "${CPPDAP_INCLUDE_INSTALL_DIR}"
 )
 
 install(
