Add option to use external json library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@
 cmake_policy(SET CMP0048 NEW)
 project(cppdap VERSION 1.58.0 LANGUAGES CXX C)
 
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.13)
 
 set (CMAKE_CXX_STANDARD 11)
 
@@ -38,6 +38,8 @@ option_if_not_defined(CPPDAP_ASAN "Build dap with address sanitizer" OFF)
 option_if_not_defined(CPPDAP_MSAN "Build dap with memory sanitizer" OFF)
 option_if_not_defined(CPPDAP_TSAN "Build dap with thread sanitizer" OFF)
 option_if_not_defined(CPPDAP_INSTALL_VSCODE_EXAMPLES "Build and install dap examples into vscode extensions directory" OFF)
+option_if_not_defined(CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE "Use nlohmann_json with find_package() instead of building internal submodule" OFF)
+option_if_not_defined(CPPDAP_USE_EXTERNAL_RAPID_JSON_PACKAGE "Use RapidJSON with find_package()" OFF)
 
 ###########################################################
 # Directories
@@ -68,6 +70,22 @@ endif(CPPDAP_BUILD_TESTS)
 ###########################################################
 # JSON library
 ###########################################################
+
+if(CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE AND CPPDAP_USE_EXTERNAL_RAPID_JSON_PACKAGE)
+    message(FATAL_ERROR "Don't set both CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE and CPPDAP_USE_EXTERNAL_RAPID_JSON_PACKAGE")
+elseif(CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE OR CPPDAP_USE_EXTERNAL_RAPID_JSON_PACKAGE)
+    set(USING_EXTERNAL_JSON true)
+    if(CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE)
+        find_package(nlohmann_json CONFIG REQUIRED)
+        set(CPPDAP_JSON_LIBRARY "nlohmann")
+    elseif(CPPDAP_USE_EXTERNAL_RAPID_JSON_PACKAGE)
+        find_package(RapidJSON CONFIG REQUIRED)
+        set(CPPDAP_JSON_LIBRARY "rapid")
+    endif()
+else()
+    set(USING_EXTERNAL_JSON false)
+endif()
+
 if(NOT DEFINED CPPDAP_JSON_LIBRARY)
     # Attempt to detect JSON library from CPPDAP_JSON_DIR
     if(NOT EXISTS "${CPPDAP_JSON_DIR}")
@@ -154,13 +172,13 @@ function(cppdap_set_target_options target)
 
     if(CPPDAP_ASAN)
         target_compile_options(${target} PUBLIC "-fsanitize=address")
-        target_link_libraries(${target} "-fsanitize=address")
+        target_link_options(${target} PUBLIC "-fsanitize=address")
     elseif(CPPDAP_MSAN)
         target_compile_options(${target} PUBLIC "-fsanitize=memory")
-        target_link_libraries(${target} "-fsanitize=memory")
+        target_link_options(${target} PUBLIC "-fsanitize=memory")
     elseif(CPPDAP_TSAN)
         target_compile_options(${target} PUBLIC "-fsanitize=thread")
-        target_link_libraries(${target} "-fsanitize=thread")
+        target_link_options(${target} PUBLIC "-fsanitize=thread")
     endif()
 
     # Error on undefined symbols
@@ -183,11 +201,18 @@ endfunction(cppdap_set_target_options)
 add_library(cppdap STATIC ${CPPDAP_LIST})
 set_target_properties(cppdap PROPERTIES POSITION_INDEPENDENT_CODE 1)
 
-target_include_directories(cppdap PRIVATE "${CPPDAP_JSON_DIR}/include/")
+if (CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE)
+    target_link_libraries(cppdap PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
+elseif(CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE)
+    target_link_libraries(cppdap PRIVATE RapidJSON rapidjson::rapidjson)
+else()
+    target_include_directories(cppdap PRIVATE "${CPPDAP_JSON_DIR}/include/")
+endif()
+
 
 cppdap_set_target_options(cppdap)
 
-target_link_libraries(cppdap "${CPPDAP_OS_LIBS}")
+target_link_libraries(cppdap PRIVATE ${CPPDAP_OS_LIBS})
 
 set(CPPDAP_TARGET_NAME               ${PROJECT_NAME})
 set(CPPDAP_CONFIG_INSTALL_DIR        "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" CACHE INTERNAL "")
@@ -254,11 +279,19 @@ if(CPPDAP_BUILD_TESTS)
         ${CPPDAP_GOOGLETEST_DIR}/googlemock/include/
         ${CPPDAP_GOOGLETEST_DIR}/googletest/
         ${CPPDAP_GOOGLETEST_DIR}/googletest/include/
-        ${CPPDAP_JSON_DIR}/include/
     )
+
+    if (NOT USING_EXTERNAL_JSON)
+        list(APPEND DAP_TEST_INCLUDE_DIR ${CPPDAP_JSON_DIR}/include/)
+    endif()
 
     add_executable(cppdap-unittests ${DAP_TEST_LIST})
 
+    if (CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE)
+        target_link_libraries(cppdap-unittests PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
+    elseif(CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE)
+        target_link_libraries(cppdap-unittests PRIVATE RapidJSON rapidjson::rapidjson)
+    endif()
     set_target_properties(cppdap-unittests PROPERTIES
         INCLUDE_DIRECTORIES "${DAP_TEST_INCLUDE_DIR}"
         FOLDER "Tests"
@@ -271,7 +304,7 @@ if(CPPDAP_BUILD_TESTS)
 
     cppdap_set_target_options(cppdap-unittests)
 
-    target_link_libraries(cppdap-unittests cppdap "${CPPDAP_OS_LIBS}")
+    target_link_libraries(cppdap-unittests PRIVATE cppdap ${CPPDAP_OS_LIBS})
 endif(CPPDAP_BUILD_TESTS)
 
 # fuzzer
@@ -286,16 +319,16 @@ if(CPPDAP_BUILD_FUZZER)
     add_executable(cppdap-fuzzer ${DAP_FUZZER_LIST})
     if(CPPDAP_ASAN)
         target_compile_options(cppdap-fuzzer PUBLIC "-fsanitize=fuzzer,address")
-        target_link_libraries(cppdap-fuzzer "-fsanitize=fuzzer,address")
+        target_link_options(cppdap-fuzzer PUBLIC "-fsanitize=fuzzer,address")
     elseif(CPPDAP_MSAN)
         target_compile_options(cppdap-fuzzer PUBLIC "-fsanitize=fuzzer,memory")
-        target_link_libraries(cppdap-fuzzer "-fsanitize=fuzzer,memory")
+        target_link_options(cppdap-fuzzer PUBLIC "-fsanitize=fuzzer,memory")
     elseif(CPPDAP_TSAN)
         target_compile_options(cppdap-fuzzer PUBLIC "-fsanitize=fuzzer,thread")
-        target_link_libraries(cppdap-fuzzer "-fsanitize=fuzzer,thread")
+        target_link_options(cppdap-fuzzer PUBLIC "-fsanitize=fuzzer,thread")
     else()
         target_compile_options(cppdap-fuzzer PUBLIC "-fsanitize=fuzzer")
-        target_link_libraries(cppdap-fuzzer "-fsanitize=fuzzer")
+        target_link_options(cppdap-fuzzer PUBLIC "-fsanitize=fuzzer")
     endif()
     target_include_directories(cppdap-fuzzer PUBLIC
         ${CPPDAP_INCLUDE_DIR}
