--- a/license-checker.cfg
+++ b/license-checker.cfg
@@ -7,6 +7,7 @@
         {
             "exclude": [
                 ".clang-format",
+                ".gitattributes",
                 ".gitignore",
                 ".gitmodules",
                 ".vscode/*.json",
