--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,11 +136,11 @@ endif()
 
 function(cppdap_set_json_links target)
     if (CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE)
-        target_link_libraries(cppdap PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
+        target_link_libraries(${target} PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
     elseif(CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE)
-        target_link_libraries(cppdap PRIVATE rapidjson)
+        target_link_libraries(${target} PRIVATE rapidjson)
     else()
-        target_include_directories(cppdap PRIVATE "${CPPDAP_JSON_DIR}/include/")
+        target_include_directories(${target} PRIVATE "${CPPDAP_JSON_DIR}/include/")
     endif()    
 endfunction(cppdap_set_json_links)
 
