--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -17,3 +17,9 @@ include(CMakeFindDependencyMacro)
 
 include("${CMAKE_CURRENT_LIST_DIR}/@CPPDAP_TARGETS_EXPORT_NAME@.cmake")
 check_required_components("@CPPDAP_TARGET_NAME@")
+
+if ( @CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE@ )
+    find_dependency(nlohmann_json CONFIG)
+elseif( @CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE@ )
+    find_dependency(RapidJSON CONFIG)
+endif()
