Address PR comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,11 +72,21 @@ endif(CPPDAP_BUILD_TESTS)
 # JSON library
 ###########################################################
 
-if((CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE AND CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE) OR
-    (CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE AND CPPDAP_USE_EXTERNAL_JSONCPP_PACKAGE) OR
-    (CPPDAP_USE_EXTERNAL_JSONCPP_PACKAGE AND CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE))
+if(CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE)
+    list(APPEND CPPDAP_EXTERNAL_JSON_PACKAGES "CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE")
+endif()
+if(CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE)
+    list(APPEND CPPDAP_EXTERNAL_JSON_PACKAGES "CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE")
+endif()
+if(CPPDAP_USE_EXTERNAL_JSONCPP_PACKAGE)
+    list(APPEND CPPDAP_EXTERNAL_JSON_PACKAGES "CPPDAP_USE_EXTERNAL_JSONCPP_PACKAGE")
+endif()
+list(LENGTH CPPDAP_EXTERNAL_JSON_PACKAGES CPPDAP_EXTERNAL_JSON_PACKAGES_COUNT)
+
+if(CPPDAP_EXTERNAL_JSON_PACKAGES_COUNT GREATER 1)
     message(FATAL_ERROR "At most one of CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE, \
-CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE, and CPPDAP_USE_EXTERNAL_JSONCPP_PACKAGE can be set.")
+CPPDAP_USE_EXTERNAL_RAPIDJSON_PACKAGE, and CPPDAP_USE_EXTERNAL_JSONCPP_PACKAGE can \
+be set, but ${CPPDAP_EXTERNAL_JSON_PACKAGES} were all set.")
 elseif(CPPDAP_USE_EXTERNAL_NLOHMANN_JSON_PACKAGE)
     find_package(nlohmann_json CONFIG REQUIRED)
     set(CPPDAP_JSON_LIBRARY "nlohmann")
