Install the runtime file, too
This makes sure the shared library, which is built when compiling with the BUILD_SHARED_LIBS flag, is installed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,6 +256,7 @@ install(
 	EXPORT                   "${CPPDAP_TARGETS_EXPORT_NAME}"
 	ARCHIVE DESTINATION      "${CMAKE_INSTALL_LIBDIR}"
 	LIBRARY DESTINATION      "${CMAKE_INSTALL_LIBDIR}"
+	RUNTIME DESTINATION      "${CMAKE_INSTALL_BINDIR}"
 	INCLUDES DESTINATION     "${CPPDAP_INCLUDE_INSTALL_DIR}"
 )
 
