disable license check on .github/workflows/main.yml

--- a/license-checker.cfg
+++ b/license-checker.cfg
@@ -8,6 +8,7 @@
             "exclude": [
                 ".clang-format",
                 ".gitattributes",
+                ".github/workflows/main.yml",
                 ".gitignore",
                 ".gitmodules",
                 ".vscode/*.json",
