kokoro: Add vs2022 configs
Pass target CPU architecture explicitly vis BUILD_TARGET_ARCH

Use cmake --build to build, instead of hardcoding the path to msbuild

--- a/kokoro/windows/vs2022-amd64/cmake/presubmit.cfg
+++ b/kokoro/windows/vs2022-amd64/cmake/presubmit.cfg
@@ -10,10 +10,10 @@ env_vars {
 
 env_vars {
   key: "BUILD_GENERATOR"
-  value: "Visual Studio 15 2017"
+  value: "Visual Studio 17 2022"
 }
 
 env_vars {
   key: "BUILD_TARGET_ARCH"
-  value: "Win32"
+  value: "x64"
 }
