--- a/kokoro/windows/msvc-14.14-x64/cmake/presubmit.cfg
+++ b/kokoro/windows/msvc-14.14-x64/cmake/presubmit.cfg
@@ -10,7 +10,7 @@ env_vars {
 
 env_vars {
   key: "BUILD_GENERATOR"
-  value: "Visual Studio 15 2017 Win64"
+  value: "Visual Studio 15 2017"
 }
 
 env_vars {
