--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           cmake --build .
           DESTDIR=../out cmake --install .
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: cppdap
+          name: cppdap-${{ matrix.CC }}
           path: out/usr/local/
